--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: database
     build: ./sql-scripts/
     image: ghcr.io/burnstopper/data-collection-database:1.0
+    command: postgres -c 'max_connections=200'
     environment:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
@@ -15,12 +16,12 @@ services:
     networks:
       - local-net
   
-#  frontend:
-#    container_name: frontend
-#    build: ./frontend/
-#    image: ghcr.io/burnstopper/data-collection-frontend:1.0
-#    volumes:
-#      - burnoutstopper-frontend:/frontend/
+  frontend:
+    container_name: frontend
+    build: ./frontend/
+    image: ghcr.io/burnstopper/data-collection-frontend:1.0
+    volumes:
+      - burnoutstopper-frontend:/frontend/
   
   gateway-service:
     container_name: gateway-service
@@ -33,8 +34,10 @@ services:
       FATIGUE_SERVICE_URI: ${FATIGUE_SERVICE_URI:-http://fatigue-service:8082}
       COPING_SERVICE_URI: ${COPING_SERVICE_URI:-http://coping-service:8083}
       SPB_SERVICE_URI: ${SPB_SERVICE_URI:-http://spb-service:8084}
-#    volumes:
-#      - burnoutstopper-frontend:/frontend/
+      USER_SERVICE_URL: ${USER_SERVICE_URL}
+      USER_SERVICE_BEARER: ${USER_SERVICE_BEARER}
+    volumes:
+      - burnoutstopper-frontend:/frontend/
     networks:
       - local-net
     ports:
@@ -102,7 +105,7 @@ services:
 
 volumes:
   burnoutstopper-data:
-#  burnoutstopper-frontend:
+  burnoutstopper-frontend:
     
 networks:
   local-net:
