--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "axios": "^1.4.0",
     "framer-motion": "^10.12.7",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "typescript": "^5.0.4",
     "universal-cookie": "^4.0.4",
+    "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
